--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "pw3",
+  "name": "auth",
   "version": "1.0.0",
-  "description": "programming homework 3",
-  "main": "options.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ashish Verma",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.2",
-    "date-diff": "^0.1.3",
+    "cors": "^2.8.4",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
-    "express-bearer-token": "^2.1.0",
-    "jsonwebtoken": "^8.1.0",
     "minimist": "^1.2.0",
-    "mongo": "^0.1.0",
-    "mongodb": "^2.2.33",
-    "nodejs": "0.0.0",
-    "nodemon": "^1.12.1"
+    "mongodb": "^2.2.33"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "description": ""
 }
